; ModuleID = '/home/carl/AnghaBench/mruby/mrbgems/mruby-math/src/extr_math.c_math_acosh.c'
source_filename = "/home/carl/AnghaBench/mruby/mrbgems/mruby-math/src/extr_math.c_math_acosh.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"f\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"acosh\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @math_acosh to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @math_acosh(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca double, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @mrb_get_args(i32* %6, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), double* %5)
  %8 = load double, double* %5, align 8
  %9 = fcmp olt double %8, 1.000000e+00
  br i1 %9, label %10, label %13

10:                                               ; preds = %2
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @domain_error(i32* %11, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  br label %13

13:                                               ; preds = %10, %2
  %14 = load double, double* %5, align 8
  %15 = call double @acosh(double %14) #3
  store double %15, double* %5, align 8
  %16 = load i32*, i32** %3, align 8
  %17 = load double, double* %5, align 8
  %18 = call i32 @mrb_float_value(i32* %16, double %17)
  ret i32 %18
}

declare dso_local i32 @mrb_get_args(i32*, i8*, double*) #1

declare dso_local i32 @domain_error(i32*, i8*) #1

; Function Attrs: nounwind
declare dso_local double @acosh(double) #2

declare dso_local i32 @mrb_float_value(i32*, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
